--- a/html/index.html
+++ b/html/index.html
@@ -700,9 +700,9 @@
                         <div class="left_box_content">
                             <div class="span_wrapper">
                                 <span class="counter">25</span>
-                                <span class="plus">+</span>
+                                <span class="plus">anos</span>
                             </div>
-                            <p class="text-size-18 mb-0">Years of Experience</p>
+                            <p class="text-size-18 mb-0"> encantando pets</p>
                         </div>
                     </div>
                     <figure class="mb-0 about_foot_shape position-absolute top_bottom_shape">
@@ -712,11 +712,10 @@
             </div>
             <div class="col-lg-5 col-md-12 col-sm-12 col-12">
                 <div class="about_content" data-aos="fade-right">
-                    <h6>About Us</h6>
-                    <h2>We are The Best For Your Pet Care</h2>
+                    <h6>Quem Somos</h6>
+                    <h2>Conheça nossa história de paixão pelos cães e dedicação à moda canina!</h2>
                     <p class="text-size-18 about_first_p">Em ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua nulla. </p>
-                    <p class="text-size-18">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliuie commodo.</p>
-                    <div class="btn_wrapper">
+                    <div class="btn_wrapper mt-3">
                         <a class="text-decoration-none default-btn" href="./about.html">Leia mais</a>
                     </div>
                     <figure class="mb-0 about_content_shape position-absolute left_right_shape">
