--- a/html/index.html
+++ b/html/index.html
@@ -121,9 +121,14 @@
                                 <a class="nav-link default-btn contact_us" href="#">Entre em contato</a>
                             </li>
                         </ul>
-                        <a href="#" class="outer_div">
+                        <a href="#" class="outer_div mr-2">
                             <figure class="mb-0">
                                 <i class="fab fa-whatsapp"></i>
+                            </figure>
+                        </a>
+                        <a href="#" class="outer_div cart">
+                            <figure class="mb-0">
+                                <i class="fa-solid fa-cart-shopping"></i>
                             </figure>
                         </a>
                     </div>
@@ -413,7 +418,7 @@
                 <div class="item">
                     <div class="services_box box3">
                         <figure>
-                            <img src="./assets/images/services_image1.png" alt="" class="img-fluid hover-effect">
+                            <img src="./assets/images/icon-macho.png" alt="" class="img-fluid hover-effect">
                         </figure>
                         <h3>Macho</h3>
                         <p class="text-size-18">Quam nihil molestiae vel illum rui dolorem em fugiat voluptas nulla...</p>
@@ -425,7 +430,7 @@
                 <div class="item">
                     <div class="services_box box3">
                         <figure>
-                            <img src="./assets/images/services_image2.png" alt="" class="img-fluid hover-effect">
+                            <img src="./assets/images/icon-femea.png" alt="" class="img-fluid hover-effect">
                         </figure>
                         <h3>Fêmea</h3>
                         <p class="text-size-18">Ruam nihil molestiae vel illum rui dolorem em fugiat voluptas nulla...</p>
@@ -437,7 +442,7 @@
                 <div class="item">
                     <div class="services_box box3">
                         <figure>
-                            <img src="./assets/images/services_image3.png" alt="" class="img-fluid hover-effect">
+                            <img src="./assets/images/icon-inverno.png" alt="" class="img-fluid hover-effect">
                         </figure>
                         <h3>Inverno</h3>
                         <p class="text-size-18">Guam nihil molestiae vel illum rui dolorem em fugiat voluptas nulla...</p>
@@ -449,7 +454,7 @@
                 <div class="item">
                     <div class="services_box box3">
                         <figure>
-                            <img src="./assets/images/services_image4.png" alt="" class="img-fluid hover-effect">
+                            <img src="./assets/images/icon-verao.png" alt="" class="img-fluid hover-effect">
                         </figure>
                         <h3>Verão</h3>
                         <p class="text-size-18">Euam nihil molestiae vel illum rui dolorem em fugiat voluptas nulla...</p>
@@ -461,7 +466,7 @@
                 <div class="item">
                     <div class="services_box box3">
                         <figure>
-                            <img src="./assets/images/services_image1.png" alt="" class="img-fluid hover-effect">
+                            <img src="./assets/images/icon-roupa-cirurgica.png" alt="" class="img-fluid hover-effect">
                         </figure>
                         <h3>Roupa Cirurgica</h3>
                         <p class="text-size-18">Quam nihil molestiae vel illum rui dolorem em fugiat voluptas nulla...</p>
@@ -473,7 +478,7 @@
                 <div class="item">
                     <div class="services_box box3">
                         <figure>
-                            <img src="./assets/images/services_image2.png" alt="" class="img-fluid hover-effect">
+                            <img src="./assets/images/icon-acessorios.png" alt="" class="img-fluid hover-effect">
                         </figure>
                         <h3>Acessórios</h3>
                         <p class="text-size-18">Ruam nihil molestiae vel illum rui dolorem em fugiat voluptas nulla...</p>
@@ -740,8 +745,8 @@
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12 col-12" data-aos="fade-right">
                 <div class="testimonials_heading_content">
-                    <h6>Testimonials</h6>
-                    <h2>What Our Client’s Have to Say!</h2>
+                    <h6>Depoimentos</h6>
+                    <h2>Veja o que nossos clientes e seus fiéis companheiros têm a dizer!</h2>
                 </div>
                 <div class="owl-carousel owl-theme">
                     <div class="item">
@@ -754,8 +759,7 @@
                                 <li><i class="fa-solid fa-star"></i></li>
                                 <li><i class="fa-solid fa-star"></i></li>
                             </ul>
-                            <h3>Daniel James</h3>
-                            <p class="text-size-18">Happy Client</p>
+                            <h3>Nome do dono</h3>
                             <figure class="testimonials_quote mb-0 position-absolute">
                                 <img src="./assets/images/testimonials_quote.png" alt="" class="img-fluid">
                             </figure>
@@ -771,8 +775,7 @@
                                 <li><i class="fa-solid fa-star"></i></li>
                                 <li><i class="fa-solid fa-star"></i></li>
                             </ul>
-                            <h3>Daniel James</h3>
-                            <p class="text-size-18">Happy Client</p>
+                            <h3>Nome do dono</h3>
                             <figure class="testimonials_quote mb-0 position-absolute">
                                 <img src="./assets/images/testimonials_quote.png" alt="" class="img-fluid">
                             </figure>
@@ -830,101 +833,93 @@
     <div class="container">
         <div class="middle-portion">
             <div class="row">
-                <div class="col-lg-5 col-md-5 col-sm-6 col-12">
+                <div class="col-lg-4 col-md-5 col-sm-6 col-12">
                     <div class="about_col">
                         <a href="./index.html">
                             <figure>
-                                <img src="./assets/images/footer_logo.png" alt="" class="img-fluid">
+                                <img width="150" src="./assets/images/stilo-dog.png" alt="" class="img-fluid">
                             </figure>
                         </a>
-                        <p>Tristirue nulla aliquet enim tortor at auctor urna nunc massa enim nec dui nunc mattis enim ut tellus perspicia aute irure repreaen ...</p>
+                        <p>NOME DA EMPRESA - CNPJ</p>
                         <div class="headphone_wrapper">
                             <figure class="mb-0">
                                 <img src="./assets/images/footer_headphone.png" alt="" class="img-fluid">
                             </figure>
                             <div class="headphone_content">
-                                <a href="tel:+568925896325" class="text-decoration-none d-block">+5689 2589 6325</a>
-                                <span>Got Questions? Call us 24/7</span>
+                                <a href="tel:+568925896325" class="text-decoration-none d-block">11 99999-9999</a>
+                                <span>Mais informações. Entre em contato.</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-6 col-12 d-lg-block d-none">
                     <div class="hours_col">
-                        <h3>Working Hours</h3>
+                        <h3>Atendimento</h3>
                         <ul class="list-unstyled">
                             <li>
-                                <p>Monday – Saturday</p>
+                                <p>Segunrda a sexta</p>
                             </li>
                             <li>
-                                <span>12:00 pm – 14:45 pm</span>
+                                <span>10:00 – 18:00</span>
                             </li>
                             <li>
-                                <p>Sunday – Thursday</p>
+                                <p>Sábado – Domingo</p>
                             </li>
                             <li>
-                                <span>17.30 pm – 00.00 am</span>
+                                <span>10:00 – 13.00</span>
                             </li>
                             <li>
-                                <p>Friday – Saturday</p>
+                                <p>Feriados</p>
                             </li>
                             <li>
-                                <span>17.30 pm – 00.00 am</span>
+                                <span>Fechado</span>
                             </li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-3 col-sm-6 col-12 d-md-block d-none">
+                <div class="col-lg-3 col-md-3 col-sm-6 col-12 d-md-block d-none">
                     <div class="links_col">
-                        <h3>Navigation</h3>
+                        <h3>Suporte</h3>
                         <ul class="list-unstyled">
                             <li>
                                 <i class="fa-solid fa-angle-right"></i>
-                                <a href="./index.html">Home</a>
+                                <a href="#">Política de privacidade</a>
                             </li>
                             <li>
                                 <i class="fa-solid fa-angle-right"></i>
-                                <a href="./about.html">About us</a>
+                                <a href="#">Política de cookies</a>
                             </li>
                             <li>
                                 <i class="fa-solid fa-angle-right"></i>
-                                <a href="./services.html">Services</a>
+                                <a href="#">Trocas e devoluções</a>
                             </li>
                             <li>
                                 <i class="fa-solid fa-angle-right"></i>
-                                <a href="./shop.html">Our Shop</a>
-                            </li>
-                            <li>
-                                <i class="fa-solid fa-angle-right"></i>
-                                <a href="./packages.html">Packages</a>
-                            </li>
-                            <li>
-                                <i class="fa-solid fa-angle-right"></i>
-                                <a href="./gallery.html">Gallery</a>
+                                <a href="#">Contato</a>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 col-12 d-sm-block d-none">
                     <div class="contact_col">
-                        <h3>Contact Us</h3>
+                        <h3>Informações e contatos</h3>
                         <ul class="list-unstyled">
                             <li>
-                                <p>Address:</p>
+                                <p>Endereço:</p>
                             </li>
                             <li>
-                                <span>121 King Street Melbourne, 3000, Australia</span>
+                                <span>Nome da Rua, 1111</span>
                             </li>
                             <li>
-                                <p>Email:</p>
+                                <p>E-mail:</p>
                             </li>
                             <li class="mail">
-                                <a href="mailto:info@pawshpetcare.com" class="text-decoration-none">info@pawshpetcare.com</a>
+                                <a href="mailto:contato@stilodog.com" class="text-decoration-none">contato@stilodog.com</a>
                             </li>
                         </ul>
                         <ul class="list-unstyled">
                             <li class="icons"><a href="#"><i class="fa-brands fa-facebook-f hover-effect" aria-hidden="true"></i></a></li>
-                            <li class="icons"><a href="#"><i class="fa-brands fa-twitter hover-effect" aria-hidden="true"></i></a></li>
+                            <li class="icons"><a href="#"><i class="fa-brands fa-youtube hover-effect" aria-hidden="true"></i></a></li>
                             <li class="icons"><a href="#"><i class="fa-brands fa-instagram mr-0 hover-effect" aria-hidden="true"></i></a></li>
                         </ul>
                     </div>
@@ -935,13 +930,10 @@
     <div class="bottom-portion">
         <div class="col-12">
             <div class="copyright">
-                <p>Copyright © 2023 pawshpetcare All rights reserved.</p>
+                <p>Stilo Dog © 2023 - Todos direito reservados. <a href="http://123esite.com.br" target="_blank" rel="noopener noreferrer">123esite</a></p>
             </div>
         </div>
     </div>
-    <figure class="mb-0 footer_right_shape position-absolute top_bottom_shape">
-        <img src="./assets/images/footer_right_shape.png" alt="" class="img-fluid">
-    </figure>
 </section>
 <!-- Latest compiled JavaScript -->
 <script src="assets/js/jquery-3.6.0.min.js"></script>
